# LM-playground

./: .gitignore  README.md  pyproject.toml
src/: cli.py  main.py
src/front/: package-lock.json
src/front/src/: App.svelte  App.svelte.bak  ChatWindow.svelte  Evaluate.svelte  IdeaComponent.svelte  ModelChooser.svelte  TemplateChooser.svelte
