[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Sven Hendrikx", email = "sven_hendrikx@hotmail.com"},
]
dependencies = [
    "accelerate>=0.18.0",
    "transformers>=4.28.1",
    "torch>=2.0.0",
    "numba>=0.56.4",
]
requires-python = ">=3.10"
license = {text = "MIT"}
