[tool.pdm]

[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Sven Hendrikx", email = "sven_hendrikx@hotmail.com"},
]
dependencies = [
    "accelerate>=0.18.0",
    "transformers>=4.28.1",
    "torch>=2.0.0",
    "langchain>=0.0.147",
    "uvicorn>=0.21.1",
    "fastapi>=0.95.1",
]
requires-python = ">=3.10"
license = {text = "MIT"}
